# FX

./: .gitmodules  README.md
Synthesizer/FM/modfm/: CMakeLists.txt  README.md
Synthesizer/FM/modfm/include/modfm/: player.h
Synthesizer/FM/modfm/src/: envgen.cc  oscillator.cc  patch.cc
Synthesizer/FM/modfm/src/ui/: device_selector.h  drawbars.cc
Synthesizer/FM/p81z/: CMakeLists.txt
Synthesizer/FM/p81z/sources/: MIDI.h
Synthesizer/FM/p81z/sources/TX81Z/: TX81Z_extra.cpp
Synthesizer/FM/p81z/tools/: CMakeLists.txt  FMOperator.h  simple_synth.cpp  simple_synth.h
Synthesizer/FM/p81z/tools/TX81Z/: TX81Z_envelope.cpp  TX81Z_extra.h  TX81Z_output_filter.cpp
Synthesizer/Waves/Oscillators/BLOsc4SectionsForSuperCollider/: BLOsc4sections test.scd  BLOsc4sections.cpp  BLOsc4sections.sc  BLOsc4sections.scx  CMakeLists.txt  README.txt
Synthesizer/Waves/Oscillators/GPOsc/: CMakeLists.txt  README.md
Synthesizer/Waves/Oscillators/GPOsc/include/: GPContinuousOsc.h  GPDrunkRNG.h  GPModel.h  GPRandom.h  GPVarianceKernel.h
Synthesizer/Waves/Oscillators/GPOsc/src/: GPContinuousOsc.cpp  GPModel.cpp  GPVarianceKernel.cpp
Synthesizer/Waves/Oscillators/GPOsc/test/: Test_GPDrunkRNG.cpp  Test_GPModel.cpp  Test_GPRandom.cpp
Synthesizer/Waves/Oscillators/Synthesizer/: CMakeLists.txt  README.md
Synthesizer/Waves/Oscillators/Synthesizer/FM/AudioGraph_FM/: Node.h  Parameter.h
Synthesizer/Waves/Oscillators/Synthesizer/FM/libfmsynth/: README.md
Synthesizer/Waves/Oscillators/Synthesizer/Lupo/Source/: ReverbPanel.h
Synthesizer/Waves/Oscillators/Synthesizer/ModFM/src/: player.cc
Synthesizer/Waves/Oscillators/Synthesizer/Sampler/Fluidsynth/: test.lua
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/: CMakeLists.txt  globals.h
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/DSP/: CMakeLists.txt  Filter.cpp  FormantFilter.cpp  Unison.cpp
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/Effects/: Alienwah.cpp  Alienwah.h  CMakeLists.txt  Echo.h  EffectMgr.cpp  EffectMgr.h
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/Misc/: Bank.cpp  Bank.h  Instrument.h  Microtonal.cpp
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/Nio/: AudioOut.cpp  CMakeLists.txt  EngineMgr.cpp  IMixer.h  MidiIn.h  Nio.h  NulEngine.cpp  OutMgr.h  SafeQueue.cpp
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/Params/: ADnoteParameters.cpp  Controller.cpp  LFOParams.cpp  Presets.cpp  PresetsArray.cpp
Synthesizer/Waves/Oscillators/Synthesizer/Zynth/Synth/: ADnote.cpp  ADnote.h  LFO.cpp  OscilGen.cpp  PADnote.cpp  SUBnote.cpp  SUBnote.h  SynthNote.h
Synthesizer/Waves/Oscillators/Synthesizer/libs/: CMakeLists.txt
Synthesizer/Waves/Oscillators/Synthesizer/src/: main.cpp
Synthesizer/Waves/Oscillators/Synthesizer/src/components/: Component.hpp  Effect.cpp  Effect.hpp  Generator.hpp
Synthesizer/Waves/Oscillators/granular/nebula/src/: CMakeLists.txt  Envelope.h  GetOpt.h  Granulator.h
Synthesizer/Waves/Oscillators/mufco/src/: Makefile.am  configure.ac  main.cpp
Synthesizer/Waves/Oscillators/mufco/src/common/: Makefile.am  common.h  fft.cpp  fft.h  (+2 more)
Synthesizer/Waves/Oscillators/uas/: AdditiveSynth.kdev4  CMakeLists.txt  LICENSE  README.md  main.cpp  oscillator.hpp
Synthesizer/Waves/genac/: .clang_complete  CMakeLists.txt  README.md  graph.py  synthesize.py
Synthesizer/Waves/genac/cmake/: BuildTypeConfig.cmake  ConfigureHeaderFile.cmake  FindCLN.cmake  FindGiNaC.cmake  OutOfSourceConfig.cmake
Synthesizer/Waves/genac/lib/: CMakeLists.txt  dbg.h
Synthesizer/Waves/genac/lib/Analyzer/: CMakeLists.txt  abstractcircuit.cpp  abstractcircuit.h  analyzer.cpp  analyzer.h  circuit.cpp  circuit.h  component.cpp  component.h  mapable.h  mapper.cpp  mapper.h  netlist.cpp  netlist.h  pretty.cpp  pretty.h  primitive.cpp  primitive.h  subcircuit.h  syms.h  x.cpp  x.h
Synthesizer/Waves/genac/lib/Synthesizer/: CMakeLists.txt  cciifilterchromosome.cpp  cciifilterchromosome.h  cfoafilterchromosome.cpp  cfoafilterchromosome.h  chromosome.cpp  chromosome.h  crossover.cpp  crossover.h  estimator.cpp  estimator.h  geneticsynthesizer.cpp  geneticsynthesizer.h  mutation.cpp  mutation.h  opampfilterchromosome.cpp  opampfilterchromosome.h  otrafilterchromosome.cpp  otrafilterchromosome.h  population.cpp  population.h  selection.cpp  selection.h  utilities.cpp  utilities.h
Synthesizer/Waves/genac/samples/: cccs.nl  ccii.nl  ccvs.nl  cfoa.nl  nested.nl  opamp.nl  otra.nl  vccs.nl  vcvs.nl
Synthesizer/Waves/genac/samples/LIB/: CCII  CFOA  OPAMP  OTRA
Synthesizer/Waves/genac/src/: CMakeLists.txt  command.cpp  command.h  config.h.in  main.cpp
Synthesizer/Waves/transfer_function/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Synthesizer/Waves/transfer_function/.github/workflows/: UnitTests.yml
Synthesizer/Waves/transfer_function/cmake/: code_coverage.cmake  cppcheck.cmake  cpplint.cmake
Synthesizer/Waves/transfer_function/components/: CMakeLists.txt
Synthesizer/Waves/transfer_function/components/c2d/: CMakeLists.txt
Synthesizer/Waves/transfer_function/components/frequency_analysis/: CMakeLists.txt
Synthesizer/Waves/transfer_function/components/polynomial/: CMakeLists.txt
Synthesizer/Waves/transfer_function/components/simulation/: CMakeLists.txt
Synthesizer/Waves/transfer_function/components/tf/: CMakeLists.txt
Synthesizer/Waves/transfer_function/include/: discretization_method.hpp  transfer_function.hpp
Synthesizer/Waves/transfer_function/src/: transfer_function.cpp
Synthesizer/Waves/transfer_function/tests/: CMakeLists.txt  core_transfer_function_tests.cpp  discretizer_tests.cpp  frequency_analysis_tests.cpp  polynomial_tests.cpp  simulator_tests.cpp  transfer_function_tests.cpp
Synthesizer/fast-additive-comparison/: CMakeLists.txt  README.md
Synthesizer/fast-additive-comparison/scripts/: lookup_table.py  sincos-approximation.py
Synthesizer/fast-additive-comparison/src/comparisons/: compare-accuracy.cpp  compare-speed.cpp
Synthesizer/fast-additive-comparison/src/implementations/: common.hpp  lookup_table.h  oscillator-bank.hpp  phase-to-amplitude.hpp  recursive.hpp
(+3682 files in other folders)
